12/4/11 common: Fixed: Initial conditions for "stick to track" not respected in 3rd tab
12/4/11 common: Fixed: Drag to add track should have track centered in box horizontally, move down from the text, center the text
12/4/11 common: Made the mountains 25% smaller so they won't overlap the W track in tab 1 of basics sim
12/4/11 common: Changed "Drag to add track" to "Tracks"
12/4/11 basic: Make x=2 meters the dark line with labels
12/4/11 basic: Put the numbers on the left side of the line instead of the right side
12/4/11 basic: Fixed: When closing the bar graph, checkbox should get unchecked
12/2/11 basic: Fixed: After changing friction then reset all, friction not disabled in Friction tab
12/2/11 basic: Merged control panels in the track playground tab
12/2/11 basic: Merged control panels in the friction tab
# 2.08.05 (58976) Dec 1, 2011
12/1/11 basic: made the icons in the control panel clickable for toggling their respective properties
12/1/11 common: Removed padding from mountain image
12/1/11 common: Made "drag to add track" box rounded and added insets
12/1/11 common: Use orange piccolo button for "Return Skater" button for both sims
12/1/11 common: Replaced house and mountain images with higher resolution versions from NP
12/1/11 common: use PhetColorScheme.RED_COLORBLIND instead of Color.red
12/1/11 common: require pie values to be positive
12/1/11 basics: Fixed initial value of track friction for the slider
12/1/11 basics: Fixed: when transitioning from a spline to the floor, there is a thermal energy discontinuity
12/1/11 basics: Made floor friction same as track friction
12/1/11 common: Fixed: Tracks are no longer interactive in non-basics mode
11/30/11 basics: Converted friction slider to be Piccolo based.
11/30/11 basics: Made the selectors for track shapes highlight when selected.
11/30/11 basics: Move the double-well to the right so it will have its lowest peak directly on the 6 meter mark for the grid